--- a/.env.example
+++ b/.env.example
@@ -1,24 +1,24 @@
-APP_NAME="The Great Spoon"
+APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:aq74WLdrPPCeOCE1DY7K9Uzgjweq/cCrEypNCkkiMH4=
-APP_DEBUG=false
+APP_KEY=
+APP_DEBUG=true
 APP_URL=http://localhost
 
-LOG_CHANNEL=daily
+LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=gcarecom_service
-DB_USERNAME=gcarecom_service
-DB_PASSWORD=@api.gcare
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=database
+FILESYSTEM_DISK=local
+QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -28,13 +28,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME="binnurtikweb@gmail.com"
-MAIL_PASSWORD="cpenlczjjoitttxm"
-MAIL_ENCRYPTION=tls
-MAIL_FROM_NAME="The Great Spoon"
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
+MAIL_USERNAME=null
+MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS="hello@example.com"
+MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -50,6 +51,7 @@ PUSHER_PORT=443
 PUSHER_SCHEME=https
 PUSHER_APP_CLUSTER=mt1
 
+VITE_APP_NAME="${APP_NAME}"
 VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 VITE_PUSHER_HOST="${PUSHER_HOST}"
 VITE_PUSHER_PORT="${PUSHER_PORT}"
