--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,13 @@
     "keywords": ["laravel", "framework"],
     "license": "MIT",
     "require": {
-        "php": "^8.1",
+        "php": "^8.2",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^10.10",
+        "intervention/image": "^2.7",
+        "laravel/framework": "^10.47",
+        "laravel/reverb": "@beta",
         "laravel/sanctum": "^3.3",
-        "laravel/tinker": "^2.8",
-        "intervention/image": "^2.7"
+        "laravel/tinker": "^2.8"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
